# BrawlBot

./: README.md  active.py  data.py  functions.py  main.py  pyproject.toml  read_message.py
static/css/: style.css
templates/: steam.html
