[tool.poetry]
name = "repl_python3_beta_BrawlBot"
version = "0.1.0"
description = "Automated server role assignment"
authors = ["Paul Kallumkal"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
